--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=back
+spring.application.name=web_mail
+
+#
+# JDBC properties
+#
+
+spring.datasource.url=jdbc:mysql://localhost:3306/web_mail
+spring.datasource.username=web_mail
+spring.datasource.password=web_mail
+
+#
+# logging
+#
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
