--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name=web_mail
 #
 
 spring.datasource.url=jdbc:mysql://localhost:3306/web_mail
-spring.datasource.username=webMail
-spring.datasource.password=webMail
+spring.datasource.username=root
+spring.datasource.password=abdo9122
 
 #
 # logging
