--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.password=webMail
 # logging
 #
 
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.root=WARN
+logging.level.org.springframework.security=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.org.springframework.web=ERROR
