--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "^5.16.11",
     "axios": "^1.7.9",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
