added proxy to userController, added spring session management (still need to be handled in front)

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.level.root=WARN
 logging.level.org.springframework.security=ERROR
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
+
+
+#
+# Session properties
+#
+server.servlet.session.timeout=60m
