--- a/back/pom.xml
+++ b/back/pom.xml
@@ -16,7 +16,9 @@
 
 	<properties>
 		<java.version>23</java.version>
-		<spring-boot.version>3.4.0</spring-boot.version> <!-- Update Spring Boot version if needed -->
+		<spring-boot.version>3.4.0</spring-boot.version>
+		<maven.compiler.source>23</maven.compiler.source>
+		<maven.compiler.target>23</maven.compiler.target> <!-- Update Spring Boot version if needed -->
 	</properties>
 
 	<dependencies>
